JCR-438 : optimization, tests